examples/test/testpolicy12542.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12542
  namespace: namespace326
spec:
  podSelector:
    matchLabels:
      key24: value39
      key47: value37
      key29: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value2
          key21: value15
      podSelector:
        matchLabels:
          key21: value8
